crates/check/src/check/expr/snapshots/code_moniker_check__check__expr__snapshots__subset_unique_method_name.snap
---
source: crates/check/src/check/expr/snapshots.rs
expression: snapshot_expr(&expr)
---
{
  "root": {
    "lhs": {
      "expr": {
        "domain": {
          "kind": "method",
          "type": "children"
        },
        "path": [
          "name"
        ],
        "type": "projection"
      },
      "type": "collection"
    },
    "op": "subset",
    "raw": "method.name subset unique(method.name)",
    "rhs": {
      "expr": {
        "expr": {
          "domain": {
            "kind": "method",
            "type": "children"
          },
          "path": [
            "name"
          ],
          "type": "projection"
        },
        "type": "unique"
      },
      "type": "collection"
    },
    "type": "atom"
  }
}
