crates/check/src/check/expr/snapshots/code_moniker_check__check__expr__snapshots__unknown_collection_projection.snap
---
source: crates/check/src/check/expr/snapshots.rs
expression: "json!({ \"input\": input.trim(), \"error\": err.to_string(), })"
---
{
  "error": "expression `field.nmae subset method.name`: unknown collection projection `nmae`",
  "input": "field.nmae subset method.name"
}
