crates/check/src/check/expr/snapshots/code_moniker_check__check__expr__snapshots__unknown_domain.snap
---
source: crates/check/src/check/expr/snapshots.rs
assertion_line: 23
expression: "json!({ \"input\": input.trim(), \"error\": err.to_string(), })"
---
{
  "error": "expression `count(service) <= 1`: unknown domain `service` (allowed: segment, out_refs, in_refs, source.out_refs, source.in_refs, target.out_refs, target.in_refs, source.ancestors.out_refs, source.ancestors.in_refs, or one of class, method, function, module, field, param, enum_constant)",
  "input": "count(service) <= 1"
}
