crates/check/src/check/expr/snapshots/code_moniker_check__check__expr__snapshots__unknown_lhs.snap
---
source: crates/check/src/check/expr/snapshots.rs
expression: "json!({ \"input\": input.trim(), \"error\": err.to_string(), })"
---
{
  "error": "expression `bogus = foo`: unknown lhs `bogus`",
  "input": "bogus = foo"
}
