crates/check/src/check/expr/snapshots/code_moniker_check__check__expr__snapshots__unknown_shape_domain.snap
---
source: crates/check/src/check/expr/snapshots.rs
expression: "json!({ \"input\": input.trim(), \"error\": err.to_string(), })"
---
{
  "error": "expression `count(shape:ref) <= 1`: unknown shape domain `ref` (allowed: namespace, type, callable, value, annotation)",
  "input": "count(shape:ref) <= 1"
}
