crates/check/src/check/expr/snapshots/code_moniker_check__check__expr__snapshots__unmatched_close_paren.snap
---
source: crates/check/src/check/expr/snapshots.rs
expression: "json!({ \"input\": input.trim(), \"error\": err.to_string(), })"
---
{
  "error": "expression `name = 'X')`: trailing input at byte 10: `)`",
  "input": "name = 'X')"
}
